# car-manager

./: .clang-format  CMakeLists.txt  Makefile  README.md  car.h  car_manager.cpp  car_manager.h  cars.db  main.cpp
data/: carbase.txt  carbase2.txt
include/: car.h  car_manager.h  database.h  utils.h
src/: car_manager.cpp  database.cpp  main.cpp  utils.cpp
